--- a/style.css
+++ b/style.css
@@ -20,9 +20,6 @@ body{
     background-size: cover;
     position: relative;
 }
-#right-side{
-    flex: 2;
-}
 
 #logo{
     background-color: hsla(0,0%,0%,0.5);
@@ -53,7 +50,6 @@ img{
     bottom: 10px;
     color: white;
     left: 150px;
-    font-family: sans-serif;
     font-weight: lighter;
 }
 
@@ -61,3 +57,111 @@ img{
     color: white;
 }
 
+#left-footer, #right-side{
+    font-family: sans-serif;
+}
+
+#right-side{
+    flex: 2;
+    display: flex;
+    flex-direction: column;
+}
+
+#section-1{
+    flex: 1;
+    background-color: hsla(0, 0%, 95%, 1);
+    padding: 40px 300px 20px 50px;
+    font-size: 20px;
+}
+
+#section-2{
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+    padding: 20px 70px 20px 50px;
+    box-shadow: 2px 5px 2px 5px gray;
+}
+
+#section-3{
+    flex: 1;
+    background-color: hsla(0, 0%, 95%, 1);
+    padding: 30px 200px 50px 50px;
+}
+
+label{
+    display: block;
+    font-size: 12px;
+    font-weight: bold;
+
+}
+
+form{
+    flex: 2;
+    margin-top: 15px;
+    display: flex;
+    gap: 50px;
+    
+}
+
+#left-form, #right-form{
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+
+}
+
+#form-text{
+    font-family: 'Norse-Bold', sans-serif;
+    font-weight: bold;
+    font-size: 24px;
+}
+
+input{
+    width: 350px;
+    height: 30px;
+    font-size: 15px;
+    padding: 12px;
+    border-style: solid;
+    border-radius: 5px;
+    border-color: #E5E7EB;
+    margin: 0;
+}
+
+button{
+    font-family: sans-serif;
+    background-color: #596D48;
+    color: white;
+    padding: 15px 45px;
+    border-style: solid;
+    border-radius: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    margin-bottom: 30px;
+    box-shadow: 2px 5px 5px 2px lightgray;
+}
+
+#form-link{
+    text-decoration: none;
+    margin-left: 5px;
+    color: #596D48;
+    font-weight: bold;
+}
+
+#form-footer{
+    font-size: 18px;
+}
+
+#section-1-toptext{
+    margin-top: 70px;
+    margin-bottom: 30px;
+}
+
+
+#section-1-toptext, #section-1-bottomtext{
+    font-weight: bold;
+    font-size: 27;
+}
+
+input:focus{
+    box-shadow: 3px 2px 5px 1px gray;
+}
